--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: #fafafa;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -31,6 +31,7 @@
     --chart-5: 27 87% 67%;
     /* hex */
     --active-sidebar: #f5f5f7;
+    --bold-title: #141522;
   }
 
   .dark {
